--- a/wakelock/pubspec.yaml
+++ b/wakelock/pubspec.yaml
@@ -3,7 +3,6 @@ description: >-2
   Plugin that allows you to keep the device screen awake, i.e. prevent the screen from sleeping on
   Android, iOS, macOS, Windows, and web.
 version: 0.6.2
-repository: https://github.com/creativecreatorormaybenot/wakelock/tree/main/wakelock
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
@@ -18,7 +17,11 @@ dependencies:
   wakelock_macos: ^0.4.0
   wakelock_platform_interface: ^0.3.0
   wakelock_web: ^0.4.0
-  wakelock_windows: ^0.2.0
+  wakelock_windows: 
+    git:
+      url: https://github.com/gsshop-microsvc/wakelock.git
+      ref: main
+      path: ../wakelock_windows
 
 dev_dependencies:
   flutter_test:
